fix wine bottles markup

--- a/css/style.css
+++ b/css/style.css
@@ -1296,7 +1296,7 @@ h1, h2, h3, h4, h5,
   .wine_v_1:before, .wine_h_1:before {
     content: "";
     background: #f3f4f5;
-    top: -20%;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
